FZU: fix database connection and rename files

--- a/clients-service/src/main/resources/application.properties
+++ b/clients-service/src/main/resources/application.properties
@@ -2,11 +2,17 @@
 spring.application.name=clients-service
 server.port=8082
 
-# Base de datos MySQL
-spring.datasource.url=jdbc:mysql://clients-db:3307/clients_db?useSSL=false&allowPublicKeyRetrieval=true
+# Database configuration
+spring.datasource.url=jdbc:mysql://clients-db:3306/clients_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=${CLIENTS_DB_USER}
 spring.datasource.password=${CLIENTS_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Retry configuration
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.initialization-fail-timeout=10000
+spring.retry.max-attempts=5
+spring.retry.max-interval=50000
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
