--- a/accounts-service/src/main/resources/application.properties
+++ b/accounts-service/src/main/resources/application.properties
@@ -2,11 +2,17 @@
 spring.application.name=accounts-service
 server.port=8081
 
-# Base de datos MySQL
+# Database configuration
 spring.datasource.url=jdbc:mysql://accounts-db:3306/accounts_db?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=${ACCOUNTS_DB_USER}
 spring.datasource.password=${ACCOUNTS_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Retry configuration
+spring.datasource.hikari.connection-timeout=10000
+spring.datasource.hikari.initialization-fail-timeout=10000
+spring.retry.max-attempts=5
+spring.retry.max-interval=50000
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
