--- a/clients-service/pom.xml
+++ b/clients-service/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>mysql-connector-j</artifactId>
 			<version>8.0.31</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
+			<version>1.3.4</version>
+		</dependency>
 		<!-- Dependencies for APIRest Documentation -->
 		<dependency>
 			<groupId>io.springfox</groupId>
